gui/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: conditar-gui
  labels:
    app: conditar-gui
  annotations:
    haproxy.router.openshift.io/timeout: 35m
spec:
  to:
    kind: Service
    name: conditar-gui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
